src/datafusion-local/src/tests/snapshots/liquid_cache_datafusion_local__tests__squeeze__basic_squeeze.snap
---
source: src/datafusion-local/src/tests/squeeze.rs
expression: trace
---
EventTrace: [
event=insert_success entry=0 kind=MemoryArrow
event=insert_failed entry=262144 kind=MemoryArrow
event=squeeze_begin victims=[0]
event=squeeze_victim entry=0
event=insert_success entry=0 kind=MemoryLiquid
event=insert_success entry=262144 kind=MemoryArrow
event=eval_predicate entry=0 selection=true cached=MemoryLiquid
event=read entry=262144 selection=true expr=None cached=MemoryArrow
event=insert_failed entry=1 kind=MemoryArrow
event=squeeze_begin victims=[262144,0]
event=squeeze_victim entry=262144
event=insert_success entry=262144 kind=MemoryLiquid
event=squeeze_victim entry=0
event=io_write entry=0 kind=MemorySqueezedLiquid bytes=63528
event=insert_success entry=0 kind=MemorySqueezedLiquid
event=insert_success entry=1 kind=MemoryArrow
event=insert_failed entry=262145 kind=MemoryArrow
event=squeeze_begin victims=[1,262144,0]
event=squeeze_victim entry=1
event=insert_success entry=1 kind=MemoryLiquid
event=squeeze_victim entry=262144
event=io_write entry=262144 kind=DiskLiquid bytes=17448
event=insert_success entry=262144 kind=DiskLiquid
event=squeeze_victim entry=0
event=insert_success entry=0 kind=DiskLiquid
event=insert_success entry=262145 kind=MemoryArrow
event=eval_predicate entry=1 selection=true cached=MemoryLiquid
event=read entry=262145 selection=true expr=None cached=MemoryArrow
event=insert_failed entry=2 kind=MemoryArrow
event=squeeze_begin victims=[262145,1]
event=squeeze_victim entry=262145
event=insert_success entry=262145 kind=MemoryLiquid
event=squeeze_victim entry=1
event=io_write entry=1 kind=MemorySqueezedLiquid bytes=63528
event=insert_success entry=1 kind=MemorySqueezedLiquid
event=insert_success entry=2 kind=MemoryArrow
event=insert_failed entry=262146 kind=MemoryArrow
event=squeeze_begin victims=[2,262145,1]
event=squeeze_victim entry=2
event=insert_success entry=2 kind=MemoryLiquid
event=squeeze_victim entry=262145
event=io_write entry=262145 kind=DiskLiquid bytes=17448
event=insert_success entry=262145 kind=DiskLiquid
event=squeeze_victim entry=1
event=insert_success entry=1 kind=DiskLiquid
event=insert_success entry=262146 kind=MemoryArrow
event=eval_predicate entry=2 selection=true cached=MemoryLiquid
event=read entry=262146 selection=true expr=None cached=MemoryArrow
event=insert_failed entry=4294967296 kind=MemoryArrow
event=squeeze_begin victims=[262146,2]
event=squeeze_victim entry=262146
event=insert_success entry=262146 kind=MemoryLiquid
event=squeeze_victim entry=2
event=io_write entry=2 kind=MemorySqueezedLiquid bytes=63528
event=insert_success entry=2 kind=MemorySqueezedLiquid
event=insert_success entry=4294967296 kind=MemoryArrow
event=insert_failed entry=4295229440 kind=MemoryArrow
event=squeeze_begin victims=[4294967296,262146,2]
event=squeeze_victim entry=4294967296
event=insert_success entry=4294967296 kind=MemoryLiquid
event=squeeze_victim entry=262146
event=io_write entry=262146 kind=DiskLiquid bytes=17448
event=insert_success entry=262146 kind=DiskLiquid
event=squeeze_victim entry=2
event=insert_success entry=2 kind=DiskLiquid
event=insert_success entry=4295229440 kind=MemoryArrow
event=eval_predicate entry=4294967296 selection=true cached=MemoryLiquid
event=read entry=4295229440 selection=true expr=None cached=MemoryArrow
]
