src/datafusion-local/src/tests/snapshots/liquid_cache_datafusion_local__tests__squeeze__squeeze_distinct_search_phase.snap
---
source: src/datafusion-local/src/tests/squeeze.rs
expression: trace
---
EventTrace: [
event=insert_success entry=2555904 kind=MemoryArrow
event=eval_predicate entry=2555904 selection=true cached=MemoryArrow
event=read entry=2555904 selection=true expr=None cached=MemoryArrow
event=insert_success entry=2555905 kind=MemoryArrow
event=eval_predicate entry=2555905 selection=true cached=MemoryArrow
event=read entry=2555905 selection=true expr=None cached=MemoryArrow
event=insert_failed entry=2555906 kind=MemoryArrow
event=squeeze_begin victims=[2555904,2555905]
event=squeeze_victim entry=2555904
event=insert_success entry=2555904 kind=MemoryLiquid
event=squeeze_victim entry=2555905
event=insert_success entry=2555905 kind=MemoryLiquid
event=insert_success entry=2555906 kind=MemoryArrow
event=eval_predicate entry=2555906 selection=true cached=MemoryArrow
event=read entry=2555906 selection=true expr=None cached=MemoryArrow
event=insert_success entry=4297523200 kind=MemoryArrow
event=eval_predicate entry=4297523200 selection=true cached=MemoryArrow
event=read entry=4297523200 selection=true expr=None cached=MemoryArrow
event=eval_predicate entry=2555904 selection=true cached=MemoryLiquid
event=read entry=2555904 selection=true expr=None cached=MemoryLiquid
event=eval_predicate entry=2555905 selection=true cached=MemoryLiquid
event=read entry=2555905 selection=true expr=None cached=MemoryLiquid
event=eval_predicate entry=2555906 selection=true cached=MemoryArrow
event=read entry=2555906 selection=true expr=None cached=MemoryArrow
event=eval_predicate entry=4297523200 selection=true cached=MemoryArrow
event=read entry=4297523200 selection=true expr=None cached=MemoryArrow
]
