src/datafusion-local/src/tests/snapshots/liquid_cache_datafusion_local__tests__squeeze__squeeze_substrings_search_title.snap
---
source: src/datafusion-local/src/tests/squeeze.rs
expression: trace
---
EventTrace: [
event=insert_success entry=131072 kind=MemoryArrow
event=eval_predicate entry=131072 selection=true cached=MemoryArrow
event=insert_success entry=131073 kind=MemoryArrow
event=eval_predicate entry=131073 selection=true cached=MemoryArrow
event=insert_failed entry=131074 kind=MemoryArrow
event=squeeze_begin victims=[131072,131073]
event=squeeze_victim entry=131072
event=insert_success entry=131072 kind=MemoryLiquid
event=squeeze_victim entry=131073
event=insert_success entry=131073 kind=MemoryLiquid
event=insert_success entry=131074 kind=MemoryArrow
event=eval_predicate entry=131074 selection=true cached=MemoryArrow
event=insert_success entry=4295098368 kind=MemoryArrow
event=eval_predicate entry=4295098368 selection=true cached=MemoryArrow
]
